--- a/package.json
+++ b/package.json
@@ -17,14 +17,11 @@
   },
   "author": "Juan Camilo Ospina Quintero",
   "license": "ISC",
+  "dependencies": {
+    "@joq/eslint-config": "workspace:*"
+  },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.35.0",
-    "@typescript-eslint/parser": "^8.35.0",
-    "eslint": "^9.30.0",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-jsonc": "^2.20.1",
-    "eslint-plugin-prettier": "^5.5.1",
+    "eslint": "^9.3.0",
     "husky": "^8.0.0",
     "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
