--- a/package.json
+++ b/package.json
@@ -30,10 +30,7 @@
     "typescript": "^5.8.3"
   },
   "lint-staged": {
-    "*.{js,ts,tsx,jsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
+    "apps/web/**/*.{js,ts,tsx,jsx}": "pnpm --filter web lint-staged",
     "*.{json,md}": [
       "prettier --write"
     ]
