--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -5,6 +5,9 @@
     "jsx": "react-jsx",
     "strict": true,
     "noImplicitAny": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
     "strictBindCallApply": true,
